--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gorhom/bottom-sheet": "^5.0.5",
     "@neondatabase/serverless": "^0.10.1",
     "@react-navigation/native": "^6.0.2",
+    "@stripe/stripe-react-native": "^0.39.0",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -49,6 +50,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
+    "stripe": "^17.2.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
